--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -1,7 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
+    <title>TDi-exchange</title>
+    <meta name="title" content="TDi-exchange " />
+    <meta
+      name="description"
+      content="TDi-exchange is a community of students that willing to help each other and grow there knowledge."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tdi-exchange.com/" />
+    <meta property="og:title" content="TDi-exchange " />
+    <meta
+      property="og:description"
+      content="TDi-exchange is a community of students that willing to help each other and grow there knowledge."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/tdi-exchange/image/upload/v1549706309/assets/logo.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://tdi-exchange.com/" />
+    <meta property="twitter:title" content="TDi-exchange " />
+    <meta
+      property="twitter:description"
+      content="TDi-exchange is a community of students that willing to help each other and grow there knowledge."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/tdi-exchange/image/upload/v1549706309/assets/logo.png"
+    />
     <meta charset="utf-8" />
+
+    <!-- viewport -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -11,6 +46,8 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,32 +57,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TDi-Exchange</title>
+
+    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/apple-touch-icon.png"
+      href="%PUBLIC_URL%/assets/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/favicon-32x32.png"
+      href="%PUBLIC_URL%/assets/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/favicon-16x16.png"
+      href="%PUBLIC_URL%/assets/favicon-16x16.png"
     />
     <link
       rel="mask-icon"
-      href="%PUBLIC_URL%/safari-pinned-tab.svg"
+      href="%PUBLIC_URL%/assets/safari-pinned-tab.svg"
       color="#585a5b"
     />
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
