Adding google fonts

--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -81,6 +81,10 @@
       href="%PUBLIC_URL%/assets/safari-pinned-tab.svg"
       color="#585a5b"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
