--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Primary Meta Tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>TDi-exchange</title>
     <meta name="title" content="TDi-exchange " />
     <meta
       name="description"
       content="TDi-exchange is a community of students that willing to help each other and grow there knowledge."
     />
-
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tdi-exchange.com/" />
@@ -21,7 +24,6 @@
       property="og:image"
       content="https://res.cloudinary.com/tdi-exchange/image/upload/v1549706309/assets/logo.png"
     />
-
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://tdi-exchange.com/" />
@@ -34,17 +36,6 @@
       property="twitter:image"
       content="https://res.cloudinary.com/tdi-exchange/image/upload/v1549706309/assets/logo.png"
     />
-    <meta charset="utf-8" />
-
-    <!-- viewport -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#ffffff" />
@@ -52,13 +43,10 @@
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -81,10 +69,56 @@
       href="%PUBLIC_URL%/assets/safari-pinned-tab.svg"
       color="#585a5b"
     />
+
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
+      href="%PUBLIC_URL%/fonts/roboto-v18-latin-regular.woff2"
+      type="font/woff2"
+      crossorigin
     />
+    <link
+      rel="preload"
+      as="font"
+      href="%PUBLIC_URL%/fonts/roboto-v18-latin-500.woff2"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="%PUBLIC_URL%/fonts/roboto-v18-latin-700.woff2"
+      type="font/woff2"
+      crossorigin
+    />
+
+    <style>
+      @font-face {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: local("Roboto"), local("Roboto-Regular"),
+          url("%PUBLIC_URL%/fonts/roboto-v18-latin-regular.woff2")
+            format("woff2");
+      }
+      @font-face {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 500;
+        font-display: swap;
+        src: local("Roboto Medium"), local("Roboto-Medium"),
+          url("%PUBLIC_URL%/fonts/roboto-v18-latin-500.woff2") format("woff2");
+      }
+      @font-face {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 700;
+        font-display: swap;
+        src: local("Roboto Bold"), local("Roboto-Bold"),
+          url("%PUBLIC_URL%/fonts/roboto-v18-latin-700.woff2") format("woff2");
+      }
+    </style>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
